--- a/backup_and_restore/application_backup_and_restore/installing/oadp-installing-operator.adoc
+++ b/backup_and_restore/application_backup_and_restore/installing/oadp-installing-operator.adoc
@@ -6,7 +6,7 @@ include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
-You can install the OpenShift API for Data Protection (OADP) Operator on {product-title} {product-version} by using Operator Lifecycle Manager (OLM).
+You can install the OpenShift API for Data Protection (OADP) Operator on {product-title} {product-version} by using the Operator Lifecycle Manager (OLM).
 
 The OADP Operator installs link:https://{velero-domain}/docs/v{velero-version}/[Velero {velero-version}].
 
