--- a/modules/migration-configuring-mcg.adoc
+++ b/modules/migration-configuring-mcg.adoc
@@ -11,9 +11,9 @@
 = Retrieving Multicloud Object Gateway credentials
 
 ifdef::installing-3-4,installing-mtc[]
-You must retrieve the Multicloud Object Gateway (MCG) credentials and S3 endpoint, which you need to configure MCG as a replication repository for the {mtc-full} ({mtc-short})
+You must retrieve the Multicloud Object Gateway (MCG) bucket credentials and S3 endpoint, which you need to configure MCG as a replication repository for the {mtc-full} ({mtc-short})
 
-You must retrieve the Multicloud Object Gateway (MCG) credentials, which you need to create a `Secret` custom resource (CR) for {mtc-short}.
+You must retrieve the Multicloud Object Gateway (MCG) bucket credentials, which you need to create a `Secret` custom resource (CR) for {mtc-short}.
 endif::[]
 
 ifdef::installing-oadp-mcg[]
@@ -42,7 +42,10 @@ ifdef::installing-3-4,installing-mtc[]
 You use these credentials to add MCG as a replication repository.
 endif::[]
 ifdef::installing-oadp-mcg[]
-. Obtain the S3 endpoint, `AWS_ACCESS_KEY_ID`, and `AWS_SECRET_ACCESS_KEY` by running the link:https://docs.redhat.com/en/documentation//red_hat_openshift_data_foundation/4.15/html/managing_hybrid_and_multicloud_resources/accessing-the-multicloud-object-gateway-with-your-applications_rhodf#accessing-the-Multicloud-object-gateway-from-the-terminal_rhodf[`describe` command] on the `NooBaa` custom resource.
+. Create a bucket using the MCG resources. For more information see, link:https://docs.redhat.com/en/documentation/red_hat_openshift_data_foundation/4.16/html-single/managing_hybrid_and_multicloud_resources/index[Managing hybrid and multicloud resources].
+
+. Obtain the S3 endpoint, `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY`, and a bucket name by running the link:https://docs.redhat.com/en/documentation//red_hat_openshift_data_foundation/4.15/html/managing_hybrid_and_multicloud_resources/accessing-the-multicloud-object-gateway-with-your-applications_rhodf#accessing-the-Multicloud-object-gateway-from-the-terminal_rhodf[`describe`] command on the created bucket resource.
+
 . Create a `credentials-velero` file:
 +
 [source,terminal]
@@ -54,5 +57,5 @@ aws_secret_access_key=<AWS_SECRET_ACCESS_KEY>
 EOF
 ----
 +
-You use the `credentials-velero` file to create a `Secret` object when you install the Data Protection Application.
+You use the `credentials-velero` file to create a `Secret` object when you install the Data Protection Application. For more information on creating the appropriate secrets see, link:https://docs.redhat.com/en/documentation/openshift_container_platform/4.16/html-single/backup_and_restore/index#oadp-about-backup-snapshot-locations_installing-oadp-mcg[About backup and snapshot locations and their secrets].
 endif::[]
