--- a/modules/oadp-about-backup-snapshot-locations-secrets.adoc
+++ b/modules/oadp-about-backup-snapshot-locations-secrets.adoc
@@ -18,7 +18,7 @@ You specify backup and snapshot locations and their secrets in the `DataProtecti
 
 You specify AWS S3-compatible object storage as a backup location, such as Multicloud Object Gateway; Red Hat Container Storage; Ceph RADOS Gateway, also known as Ceph Object Gateway; {odf-full}; or MinIO.
 
-Velero backs up {product-title} resources, Kubernetes objects, and internal images as an archive file on object storage.
+Velero backs up {product-title} resources, Kubernetes objects, and internal images as an archive file on the MCG object storage.
 
 [id="snapshot-locations_{context}"]
 [discrete]
@@ -28,7 +28,7 @@ If you use your cloud provider's native snapshot API to back up persistent volum
 
 If you use Container Storage Interface (CSI) snapshots, you do not need to specify a snapshot location because you will create a `VolumeSnapshotClass` CR to register the CSI driver.
 
-If you use File System Backup (FSB), you do not need to specify a snapshot location because FSB backs up the file system on object storage.
+If you use File System Backup (FSB), you do not need to specify a snapshot location because FSB backs up the file system on the MCG object storage.
 
 [id="secrets_{context}"]
 [discrete]
