OADP-4916: Fix oc command mentioned in PV opt-in/opt-out section
Signed-off-by: A.Arnold <anarnold@redhat.com>

--- a/modules/oadp-backing-up-opt-in.adoc
+++ b/modules/oadp-backing-up-opt-in.adoc
@@ -15,7 +15,7 @@ You can use the opt-in method to specify which volumes need to be backed up by F
 [source,terminal]
 ----
 $ oc -n <your_pod_namespace> annotate pod/<your_pod_name> \
-  backup.velero.io/backup-volumes=<your_volume_name_1>, \ <your_volume_name_2>>,...,<your_volume_name_n>
+  backup.velero.io/backup-volumes=<your_volume_name_1>,<your_volume_name_2>...,<your_volume_name_n>
 ----
 +
 where:
