--- a/modules/oadp-backing-up-opt-out.adoc
+++ b/modules/oadp-backing-up-opt-out.adoc
@@ -21,7 +21,7 @@ You can use the opt-out method to specify which volumes *not* to back up. You ca
 [source,terminal]
 ----
 $ oc -n <your_pod_namespace> annotate pod/<your_pod_name> \
-  backup.velero.io/backup-volumes-excludes=<your_volume_name_1>, \ <your_volume_name_2>>,...,<your_volume_name_n>
+  backup.velero.io/backup-volumes=<your_volume_name_1>,<your_volume_name_2>...,<your_volume_name_n>
 ----
 +
 where:
@@ -30,5 +30,5 @@ where:
 
 [NOTE]
 ====
-You can enable this behavior for all Velero backups by running the `velero install` command with the `--default-volumes-to-fs-backup` flag.
+You can ecan enable this behavior for all velero backups by setting below flag to true in  the Data Protection Application (DPA) resource `dpa.spec.configuration.velero.defaultVolumesToFSBackup`.
 ====
