RHDEVDOCS-6145: Made suggested changes in op-tkn-task-run.adoc

--- a/modules/op-tkn-task-run.adoc
+++ b/modules/op-tkn-task-run.adoc
@@ -1,6 +1,8 @@
 // This module is included in the following assemblies:
+//
 // * tkn_cli/op-tkn-reference.adoc
 
+:_mod-docs-content-type: REFERENCE
 [id="op-tkn-task-run_{context}"]
 = Task run commands
 
@@ -16,7 +18,7 @@ $ tkn taskrun -h
 == taskrun cancel
 Cancel a task run.
 
-.Example: Cancel the `mytaskrun` task run from a namespace
+.Example: Cancel a task run from a namespace
 [source,terminal]
 ----
 $ tkn taskrun cancel <task_run_name> -n <namespace_name>
@@ -60,7 +62,7 @@ $ tkn taskrun list -n <namespace_name>
 == taskrun logs
 Display task run logs.
 
-.Example: Display live logs for the `mytaskrun` task run in a namespace
+.Example: Display live logs for a task run in a namespace
 
 [source,terminal]
 ----
