TRACING-4615: improve OpenTelemetry exporters documentation
Signed-off-by: Israel Blancas <iblancas@redhat.com>

--- a/observability/otel/otel-collector/otel-collector-exporters.adoc
+++ b/observability/otel/otel-collector/otel-collector-exporters.adoc
@@ -745,40 +745,29 @@ include::snippets/technology-preview.adoc[]
     exporters:
       prometheusremotewrite:
         endpoint: "https://my-prometheus:7900/api/v1/push" # <1>
-        tls: # <2>
+        tls:
           ca_file: ca.pem
           cert_file: cert.pem
           key_file: key.pem
-        target_info: true # <3>
-        export_created_metric: true # <4>
-        max_batch_size_bytes: 3000000 # <5>
-        retry_on_failure: # <6>
+        target_info: true
+        export_created_metric: true
+        max_batch_size_bytes: 3000000
+        retry_on_failure:
           enabled: true
-          initial_interval: 5s # <7>
-          max_interval: 30s # <8>
-          max_elapsed_time: 300s # <9>
-        remote_write_queue:  # <10>
+          initial_interval: 5s
+          max_interval: 30s
+          max_elapsed_time: 300s
+        remote_write_queue:
           enabled: true
-          queue_size: 1000 # <11>
-        timeout: 5s # <12>
+          queue_size: 1000
+        timeout: 5s
     service:
       pipelines:
         metrics:
           exporters: [prometheusremotewrite]
 # ...
 ----
-<1> Endpoint for sending the metrics.
-<2> Server-side TLS configuration. Defines paths to TLS certificates.
-<3> When set to `true`, creates a `target_info` metric for each resource metric.
-<4> When set to `true`, exports a `_created` metric for the Summary, Histogram, and Monotonic Sum metric points.
-<5> Maximum size of the batch of samples that is sent to the remote write endpoint. Exceeding this value results in batch splitting. The default value is `3000000`, which is approximately 2.861 megabytes.
-<6> Settings for the retry mechanism. Enabled by default.
-<7> Time to wait after the first failure before retrying. Default `5s`.
-<8> Upper bound on backoff. Default `30s`.
-<9> Is the maximum amount of time spent trying to send a batch. Default is `300s`. `0` means to never stop the retries.
-<10> Settings for the remote write sending queue. Enabled by default.
-<11> Number of OTLP metrics that can be queued. Default is `10000`.
-<12> Time to wait per individual attempt to send data. Default `5s`.
+<1> In this example, the metrics are sent to a Prometheus instance exposed in a `Service` called `my-prometheus`.
 
 [WARNING]
 ====
@@ -786,6 +775,96 @@ include::snippets/technology-preview.adoc[]
 
 * You must enable the `--web.enable-remote-write-receiver` feature flag on the remote Prometheus instance. Without it, pushing the metrics to the instance using this exporter fails.
 ====
+
+
+.Parameters used by the Prometheus Remote Write Exporter
+[options="header"]
+[cols="a,a,a"]
+|===
+|Parameter |Description |Default
+
+|`endpoint`
+|Endpoint for sending the metrics.
+|N/A
+
+|`tls`
+|Server-side TLS configuration, defining paths to TLS certificates.
+|N/A
+
+|`target_info`
+|When set to `true`, creates a `target_info` metric for each resource metric.
+|`false`
+
+|`export_created_metric`
+|When set to `true`, exports a `_created` metric for Summary, Histogram, and Monotonic Sum metric points.
+|`false`
+
+|`max_batch_size_bytes`
+|Maximum size of the batch of samples sent to the remote write endpoint. If exceeded, the batch is split.
+|`3000000` (2.861 MB)
+
+|`retry_on_failure.enabled`
+|Settings for the retry mechanism.
+|`true`
+
+|`retry_on_failure.initial_interval`
+|Time to wait after the first failure before retrying.
+|`5s`
+
+|`retry_on_failure.max_interval`
+|Upper bound on backoff.
+|`30s`
+
+|`retry_on_failure.max_elapsed_time`
+|Maximum time spent trying to send a batch.
+|`300s`
+
+|`remote_write_queue.enabled`
+|Settings for the remote write sending queue.
+|`true`
+
+|`remote_write_queue.queue_size`
+|Number of OTLP metrics that can be queued.
+|`1000`
+
+|`timeout`
+|Time to wait per individual attempt to send data.
+|`5s`
+|===
+
+=== Troubleshooting the Prometheus Remote Write Exporter
+
+If you encounter issues with the Prometheus Remote Write Exporter, the following troubleshooting steps can help diagnose and resolve common problems.
+
+==== Metrics not reaching the Prometheus instance
+
+If metrics are not reaching the Prometheus instance, consider the following:
+
+.Procedure
+
+- Verify the `endpoint`: ensure that the `endpoint` is correctly configured, including the appropriate URL and port. Confirm that the Prometheus instance is accessible and that the `--web.enable-remote-write-receiver` flag is enabled on the remote Prometheus server.
++
+- Check the pipeline configuration: ensure that the Prometheus Remote Write Exporter is properly configured within the OpenTelemetry Collector's pipeline. Metrics should be flowing through the correct pipeline to the exporter.
+
+==== TLS or certificate issues
+
+If you experience TLS-related errors or connection failures, check the following:
+
+.Procedure
+
+- Verify the TLS configuration: ensure that the `ca_file`, `cert_file`, and `key_file` paths are correctly specified and that the certificates are valid and accessible by the OpenTelemetry Collector.
++
+- Endpoint security: ensure that the Prometheus endpoint is correctly configured for TLS, and that any intermediate certificates are correctly set up for secure communication.
+
+==== Exporter dropping specific metrics
+
+If certain metrics (e.g., non-cumulative monotonic, histogram, or summary metrics) are missing, consider the following:
+
+.Procedure
+
+- Check for unsupported metrics: the Prometheus Remote Write Exporter drops non-cumulative monotonic, histogram, and summary OTLP metrics by design. Ensure that the exported metrics are compatible with Prometheus Remote Write.
++
+- Review configuration flags on the Prometheus server: ensure that the `--web.enable-remote-write-receiver` flag is enabled. Without this flag, pushing metrics to Prometheus will fail.
 
 
 [role="_additional-resources"]
