--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -6,9 +6,9 @@
 [id="otel-instrumentation-config_{context}"]
 = OpenTelemetry instrumentation configuration options
 
-The {OTELName} can inject and configure the OpenTelemetry auto-instrumentation libraries into your workloads. Currently, the project supports injection of the instrumentation libraries from Go, Java, Node.js, Python, .NET, and the Apache HTTP Server (`httpd`).
+The {OTELName} injects and configures the OpenTelemetry auto-instrumentation libraries into your workloads. This product supports injecting instrumentation libraries for Go, Java, Node.js, Python, .NET, and the Apache HTTP Server.
 
-Auto-instrumentation in OpenTelemetry refers to the capability where the framework automatically instruments an application without manual code changes. This enables developers and administrators to get observability into their applications with minimal effort and changes to the existing codebase.
+Auto-instrumentation in OpenTelemetry refers to the capability where the framework automatically instruments an application without manual code changes. This allows developers and administrators to observe their applications with minimal effort and changes to the existing codebase.
 
 [IMPORTANT]
 ====
@@ -61,7 +61,7 @@ spec:
 |Parameter |Description |Values
 
 |`env`
-|Common environment variables to define across all the instrumentations.
+|Defines common environment variables for all instrumentation types.
 |
 
 |`exporter`
@@ -210,7 +210,7 @@ instrumentation.opentelemetry.io/inject-dotnet: "true"
 instrumentation.opentelemetry.io/inject-go: "true"
 ----
 
-.Additional permissions required for the Go auto-instrumentation in the OpenShift cluster
+.Permissions required for Go auto-instrumentation in an OpenShift cluster.
 [source,yaml]
 ----
 apiVersion: security.openshift.io/v1
@@ -236,7 +236,7 @@ supplementalGroups:
 
 [TIP]
 ====
-The CLI command for applying the permissions for the Go auto-instrumentation in the OpenShift cluster is as follows:
+The CLI command to apply permissions for Go auto-instrumentation is as follows:
 [source,terminal]
 ----
 $ oc adm policy add-scc-to-user otel-go-instrumentation-scc -z <service_account>
@@ -335,7 +335,7 @@ instrumentation.opentelemetry.io/inject-sdk: "true"
 
 Note that all the annotations accept the following values:
 
-`true`:: Injects the `+Instrumentation+` resource from the namespace.
+`true`:: Injects the Instrumentation resource from the namespace.
 
 `false`:: Does not inject any instrumentation.
 
@@ -346,7 +346,7 @@ Note that all the annotations accept the following values:
 [id="otel-multi-container-pods_{context}"]
 === Multi-container pods
 
-The instrumentation is run on the first container that is available by default according to the pod specification. In some cases, you can also specify target containers for injection.
+The instrumentation is injected on the first container that is available by default according to the pod specification. You can also specify target container names for injection.
 
 .Pod annotation
 [source,yaml]
