--- a/observability/otel/otel-collector/otel-collector-connectors.adoc
+++ b/observability/otel/otel-collector/otel-collector-connectors.adoc
@@ -6,12 +6,12 @@ include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
-A connector connects two pipelines. It consumes data as an exporter at the end of one pipeline and emits data as a receiver at the start of another pipeline. It can consume and emit data of the same or different data type. It can generate and emit data to summarize the consumed data, or it can merely replicate or route data.
+A connector connects two pipelines. It consumes data as an exporter at the end of one pipeline and emits data as a receiver at the start of another pipeline. It can consume and emit data of the same or different types. It can generate and emit data to summarize the consumed data, or it can replicate or route data.
 
 [id="forward-connector_{context}"]
 == Forward Connector
 
-The Forward Connector merges two pipelines of the same type.
+The Forward Connector merges two pipelines that process the same data type.
 
 :FeatureName: The Forward Connector
 include::snippets/technology-preview.adoc[]
@@ -91,7 +91,10 @@ include::snippets/technology-preview.adoc[]
 <2> Destination pipelines for routing the matching telemetry data. In this case, the `traces/dev` pipeline when the `X-Tenant` attribute is equal to `dev`.
 <3> In this example, if `X-Tenant` attribute is not `dev` or `prod`, the telemetry data will be forwarded to those pipelines.
 
+[NOTE]
+====
 The connector routes exclusively based on OTTL statements, which are limited to resource attributes. Currently, it does not support matching against context values.
+====
 
 .Parameters used by the Routing Connector
 [options="header"]
@@ -104,7 +107,7 @@ The connector routes exclusively based on OTTL statements, which are limited to 
 |`[]`
 
 |`table.statement`
-|Routing conditions written as OTTL (OpenTelemetry Transformation Language) statements.
+|Routing conditions written as OTTL statements.
 |N/A
 
 |`table.pipelines`
@@ -270,7 +273,7 @@ Each metric will include at least the following dimensions, as they are common a
 |`[]`
 
 |`dimensions_cache_size`
-|Specifies the cache size for storing dimensions to optimize the collector's memory usage. Must be a number bigger than 0.
+|Defines the cache size for storing dimensions, optimizing the memory usage of the collector. Must be a number bigger than 0.
 |`1000`
 
 |`aggregation_temporality`
