OCPBUGS-42627:updates UDN annotation details
remove notes in favor of table

--- a/modules/nw-udn-cr.adoc
+++ b/modules/nw-udn-cr.adoc
@@ -6,7 +6,7 @@
 [id="nw-udn-cr_{context}"]
 = Creating a UserDefinedNetwork custom resource
 
-The following procedure sets up a user-defined network that is namespace scoped.
+The following procedure creates a user-defined network that is namespace scoped. Based upon your use case, create your request using either the `my-layer-two-udn.yaml` example for a `Layer2` topology type or the `my-layer-three-udn.yaml` example for a `Layer3` topology type.
 
 //We won't have these pieces till GA in 4.18.
 //[NOTE]
@@ -16,9 +16,9 @@ The following procedure sets up a user-defined network that is namespace scoped.
 
 .Procedure
 
-. Create a request for a user-defined network:
+. Create a request for either a `Layer2` or `Layer3` topology type user-defined network:
 
-.. Create a YAML file, such as `my-udn-request.yaml`, to define your request with content as in the following example:
+.. Create a YAML file, such as `my-layer-two-udn.yaml`, to define your request for a `Layer2` topology as in the following example:
 +
 [source, yaml]
 ----
@@ -31,36 +31,70 @@ spec:
   topology: Layer2 # <2>
   layer2: <3>
     role: Primary # <4>
-    mtu: 9000 # <5>
     subnets:
       - "10.0.0.0/24"
-      - "2001:db8::/64" # <6>
-    JoinSubnets: [] # <7>
-    IPAMLifecycle: Persistent # <8>
+      - "2001:db8::/60" # <5>
 ----
 <1> Name of your `UserDefinedNetwork` resource. This should not be `default` or duplicate any global namespaces created by the Cluster Network Operator (CNO).
-<2> The `topology` field describes the network configuration, accepted values are `Layer2` and `Layer3`. `Layer3` topology creates a layer 2 segment per node, each with a different subnet. Layer 3 routing is used to interconnect node subnets. `Layer2` topology creates one logical switch shared by all nodes.
-<3> This field specifies the topology configuration, it can be `layer2` or `layer3`.
-<4> Specifies `Primary` or `Secondary`. `Primary` is the only `role` specification supported in {product-version}.
-<5> The maximum transmission units (MTU) is an optional field. The default value is `1400`. The boundary for IPv4 is 574, and for IPv6 it is 1280.
-<6> Specifies the subnet to be used for the network across the cluster. Supports both IPv6 and dual-stack. For example, `192.168.100.0/24`,`2001:DBB::/64`. Dual-stack may set two subnets otherwise only one is allowed. When the `topology` field is set to `Layer3`, the subnet is split into smaller subnets for every node. Accepted format for subnets when `Layer3` is set are: `172.16.0.0/16/24`. For `Layer2` values in `topology` field, standard CIDR ranges are accepted. If omitted the network only provides `Layer2` communication and you must configure IP addresses.
-<7> Specifies the `subnets` used inside the OVN-Kubernetes network topology. If omitted, the OVN-Kubernetes network plugin assigns one, which is subject to change over time.
-<8> Specifies the IP address management system (IPAM). This field is optional and allowed when `topology` is `layer2`. The
-`subnets` field must be specified when this field is specified. The `Persistent` value specifies that workloads have persistent IP addresses. Assigned by the container network interface (CNI) and used by OVN-Kubernetes to program pod IP addresses. You must not change this for pod annotations.
-
-.. Apply your request by running the following command:
+<2> The `topology` field describes the network configuration; accepted values are `Layer2` and `Layer3`. Specifying a `Layer2` topology type creates one logical switch that is shared by all nodes.
+<3> This field specifies the topology configuration. It can be `layer2` or `layer3`.
+<4> Specifies `Primary` or `Secondary`. `Primary` is the only `role` specification supported in 4.17.
+<5> For `Layer2` topology types the following specifies config details for the `subnet` field:
++
+* The subnets field is optional.
+* The subnets field is of type `string` and accepts standard CIDR formats for both IPv4 and IPv6.
+* The subnets field accepts one or two items. For two items, they must be of a different family. For example, subnets values of `10.100.0.0/16` and `2001:db8::/64`.
+* `Layer2` subnets can be omitted. If omitted, users must configure IP addresses for the pods. As a consequence, port security only prevents MAC spoofing.
+* The `Layer2` `subnets` field is mandatory when the `ipamLifecycle` field is specified.
++
+.. Create a YAML file, such as `my-layer-three-udn.yaml`, to define your request for a `Layer3` topology as in the following example:
++
+[source, yaml]
+----
+apiVersion: k8s.ovn.org/v1
+kind: UserDefinedNetwork
+metadata:
+  name: udn-2-primary # <1>
+  namespace: <some_custom_namespace>
+spec:
+  topology: Layer3 # <2>
+  layer3: # <3>
+    role: Primary # <4>
+    subnets: # <5>
+      - cidr: 10.150.0.0/16
+        hostSubnet: 24
+      - cidr: 2001:db8::/60
+        hostSubnet: 64
+----
+<1> Name of your `UserDefinedNetwork` resource. This should not be `default` or duplicate any global namespaces created by the Cluster Network Operator (CNO).
+<2> The `topology` field describes the network configuration; accepted values are `Layer2` and `Layer3`. Specifying a `Layer3` topology type creates a layer 2 segment per node, each with a different subnet. Layer 3 routing is used to interconnect node subnets.
+<3> This field specifies the topology configuration. Valid values are `layer2` or `layer3`.
+<4> Specifies a `Primary` or `Secondary` role. `Primary` is the only `role` specification supported in 4.17 .
+<5> For `Layer3` topology types the following specifies config details for the `subnet` field:
++
+* The `subnets` field is mandatory.
+* The type for the `subnets` field is `cidr` and `hostSubnet`:
+** `cidr` is the cluster subnet and accepts a string value.
+** `hostSubnet` specifies the nodes subnet prefix that the cluster subnet is split to.
+** For IPv6, only a `/64` length is supported for `hostSubnet`.
++
+. Apply your request by running the following command:
 +
 [source,terminal]
 ----
-$ oc apply -f my-udn-request.yaml
+$ oc apply -f <my_layer_two_udn.yaml>
 ----
++
+Where `<my_layer_two_udn.yaml>` is the name of your `Layer2` or `Layer3` configuration file.
 
 . Verify that your request is successful by running the following command:
 +
 [source, terminal]
 ----
-$ oc get userdefinednetworks udn-1 -n default -o yaml
+$ oc get userdefinednetworks udn-1 -n <some_custom_namespace> -o yaml
 ----
++
+Where `some_custom_namespace` is the namespace you created for your user-defined network.
 +
 .Example output
 [source,terminal]
@@ -78,10 +112,10 @@ metadata:
   uid: f483626d-6846-48a1-b88e-6bbeb8bcde8c
 spec:
   layer2:
-    mtu: 9000
     role: Primary
     subnets:
     - 10.0.0.0/24
+    - 2001:db8::/60
   topology: Layer2
 status:
   conditions:
@@ -91,4 +125,3 @@ status:
     status: "True"
     type: NetworkReady
 ----
-
