--- a/networking/multiple_networks/understanding-user-defined-network.adoc
+++ b/networking/multiple_networks/understanding-user-defined-network.adoc
@@ -57,8 +57,15 @@ include::modules/nw-udn-best-practices.adoc[leveloffset=+1]
 //How to implement the UDN API on a cluster.
 include::modules/nw-udn-cr.adoc[leveloffset=+1]
 
+//Explanation of optional config details
+include::modules/nw-udn-additional-config-details.adoc[leveloffset=+1]
+
 //Support matrix for UDN
 //include::modules
 
 //Examples for Layer2 and Layer3
-include::modules/nw-udn-examples.adoc[leveloffset=+2]
+//include::modules/nw-udn-examples.adoc[leveloffset=+2]
+
+//[role="_additional-resources"]
+//== Additional resources
+// * xr3f../virtual docs that point to live migration of vms for 4.18's GA.
