fix errors in patch release notes

--- a/release_notes/45-release-notes.adoc
+++ b/release_notes/45-release-notes.adoc
@@ -18,6 +18,7 @@ toc::[]
 |`4.5.0` | 24 July 2024
 |`4.5.1` | 14 August 2024
 |`4.5.2` | 16 September 2024
+|`4.5.3` | 1 October 2024
 
 |====
 
@@ -429,7 +430,7 @@ This release of {product-title-short} fixes the following security vulnerability
 [id="about-release-453_{context}"]
 == About release 4.5.3
 
-*Release date*: 30 September 2024
+*Release date*: 1 October 2024
 
 This release of {product-title-short} includes the following changes:
 
