--- a/modules/olm-restricted-networks-configuring-operatorhub.adoc
+++ b/modules/olm-restricted-networks-configuring-operatorhub.adoc
@@ -34,7 +34,7 @@ endif::[]
 
 Operator catalogs that source content provided by Red Hat and community projects are configured for OperatorHub by default during an {product-title} installation.
 ifndef::olm-managing-custom-catalogs[]
-In a restricted network environment, you must disable the default catalogs as a cluster administrator.
+In a disconnected environment, you must disable the default catalogs as a cluster administrator.
 endif::[]
 ifdef::olm-restricted-networks[]
 You can then configure OperatorHub to use local catalog sources.
