--- a/operators/index.adoc
+++ b/operators/index.adoc
@@ -64,7 +64,9 @@ endif::openshift-dedicated,openshift-rosa[]
 ** xref:../operators/admin/olm-deleting-operators-from-cluster.adoc#olm-deleting-operators-from-a-cluster[Delete installed Operators].
 ** xref:../operators/admin/olm-configuring-proxy-support.adoc#olm-configuring-proxy-support[Configure proxy support].
 ifndef::openshift-dedicated,openshift-rosa[]
-** xref:../operators/admin/olm-restricted-networks.adoc#olm-restricted-networks[Use Operator Lifecycle Manager on restricted networks].
+** xref:../disconnected/using-olm.adoc#olm-restricted-networks[Using Operator Lifecycle Manager in disconnected environments].
+
+// Not sure if this xref should be updated since this is the index/catalog for the actual Operators section
 
 To know all about the cluster Operators that Red Hat provides, see xref:../operators/operator-reference.adoc#cluster-operators-ref[Cluster Operators reference].
 endif::openshift-dedicated,openshift-rosa[]
