OLS-1103: Change value of type parameter for rhoai configuration file

--- a/modules/ols-creating-lightspeed-custom-resource-file-using-cli.adoc
+++ b/modules/ols-creating-lightspeed-custom-resource-file-using-cli.adoc
@@ -56,7 +56,7 @@ spec:
       models:
       - name: granite-8b-code-instruct-128k
       name: red_hat_openshift_ai
-      type: red_hat_openshift_ai_vllm
+      type: rohai_vllm 
       url: <url> <1>
   ols:
     defaultProvider: red_hat_openshift_ai
