--- a/operators/admin/olm-cs-podsched.adoc
+++ b/operators/admin/olm-cs-podsched.adoc
@@ -34,7 +34,7 @@ include::modules/disabling-catalogsource-objects.adoc[leveloffset=+1]
 * xref:../../operators/understanding/olm-understanding-operatorhub.adoc#olm-operatorhub-arch-operatorhub_crd_olm-understanding-operatorhub[OperatorHub custom resource]
 
 ifndef::openshift-dedicated,openshift-rosa[]
-* xref:../../disconnected/using-olm.html#olm-restricted-networks-operatorhub_olm-restricted-networks[Disabling the default OperatorHub catalog sources]
+* xref:../../disconnected/using-olm.adoc#olm-restricted-networks-operatorhub_olm-restricted-networks[Disabling the default OperatorHub catalog sources]
 endif::openshift-dedicated,openshift-rosa[]
 
 include::modules/olm-node-selector.adoc[leveloffset=+1]
