--- a/modules/configuring-hybrid-ovnkubernetes.adoc
+++ b/modules/configuring-hybrid-ovnkubernetes.adoc
@@ -22,7 +22,7 @@ This configuration is necessary to run both Linux and Windows nodes in the same 
 ====
 ////
 
-// Modified these steps to remove WMCO references until WMCO 10.17.0 releases. I removed the `hybridOverlayVXLANPort: 9898` parameter and callout text from the code block in step 3 of the install docs and step 1 of the networking docs. Also a NOTE in the install docs. When WMCO 10.17.0 releases, remove these steps and unhide the steps below.  
+// mburke: Modified these steps to remove WMCO references until WMCO 10.17.0 releases. I removed the `hybridOverlayVXLANPort: 9898` parameter and callout text from the code block in step 3 of the install docs and step 1 of the networking docs. Also a NOTE in the install docs. When WMCO 10.17.0 releases, remove these steps and unhide the steps below.  
 
 ifndef::post-install[]
 .Prerequisites
@@ -145,7 +145,7 @@ endif::post-install[]
 
 
 ////
-Hide these steps until WMCO 10.17.0 goes GA. When that happens, remove the above steps and replace with these steps. 
+mburke: I hid these steps until WMCO 10.17.0 goes GA. When that happens, remove the above steps and replace with these steps. 
 ifndef::post-install[]
 .Prerequisites
 
