--- a/operators/admin/olm-restricted-networks.adoc
+++ b/operators/admin/olm-restricted-networks.adoc
@@ -1,8 +1,8 @@
 :_mod-docs-content-type: ASSEMBLY
-[id="olm-restricted-networks"]
+[id="olm-disconnected"]
 = Using Operator Lifecycle Manager in disconnected environments
 include::_attributes/common-attributes.adoc[]
-:context: olm-restricted-networks
+:context: olm-disconnected
 
 toc::[]
 
