--- a/observability/otel/otel-collector/otel-collector-connectors.adoc
+++ b/observability/otel/otel-collector/otel-collector-connectors.adoc
@@ -109,7 +109,31 @@ include::snippets/technology-preview.adoc[]
   config: |
     connectors:
       spanmetrics:
-        metrics_flush_interval: 15s # <1>
+        histogram:
+          explicit:
+            buckets: [100us, 1ms, 2ms, 6ms, 10ms, 100ms, 250ms]
+          unit: ms
+          disable: false
+        dimensions: # <1>
+          - name: http.method
+            default: GET
+          - name: http.status_code
+        exemplars:
+          enabled: true
+        exclude_dimensions: ['status.code']
+        dimensions_cache_size: 1000
+        aggregation_temporality: "AGGREGATION_TEMPORALITY_CUMULATIVE"
+        metrics_flush_interval: 15s
+        metrics_expiration: 5m
+        events:
+          enabled: true
+          dimensions:
+            - name: exception.type
+            - name: exception.message
+        resource_metrics_key_attributes:
+          - service.name
+          - telemetry.sdk.language
+          - telemetry.sdk.name
     service:
       pipelines:
         traces:
@@ -118,9 +142,141 @@ include::snippets/technology-preview.adoc[]
           receivers: [spanmetrics]
 # ...
 ----
-<1> Defines the flush interval of the generated metrics. Defaults to `15s`.
+
+The following outlines the process for how these metrics are calculated:
+
+* Request counts are calculated based on the number of spans observed for each unique combination of dimensions, including errors. Multiple metrics can be aggregated, allowing users to view call counts filtered by specific dimensions such as `service.name` and `span.name`.
+* Error counts are derived from request counts that include the `Error Status Code` as a metric dimension.
+* Duration is calculated by the difference between the span's start and end times and is placed into the appropriate duration histogram bucket for each unique set of dimensions.
+
+Each metric will include at least the following dimensions, as they are common across all spans:
+
+* service.name
+* span.name
+* span.kind
+* status.code
+
+.Parameters used by the Spanmetrics Connector
+[options="header"]
+[cols="a,a,a"]
+|===
+|Parameter |Description |Default
+
+|`histogram.explicit`
+|Used to configure the type of histogram for recording span duration measurements. The options are either `explicit` or `exponential`.
+|`explicit`
+
+|`histogram.buckets`
+|Duration histogram time buckets.
+|`[2ms, 4ms, 6ms, 8ms, 10ms, 50ms, 100ms, 200ms, 400ms, 800ms, 1s, 1400ms, 2s, 5s, 10s, 15s]`
+
+|`histogram.unit`
+|The time unit for recording duration measurements. Can be `ms` or `s`.
+|`ms`
+
+|`histogram.disable`
+|Disable all histogram metrics.
+|`false`
+
+|`dimensions`
+|The list of additional dimensions to include alongside the default ones.
+|`[]`
+
+|`exemplars.enabled`
+|Used to configure the method for attaching exemplars to metrics.
+|`false`
+
+|`exclude_dimensions`
+|The list of dimensions to exclude from the default set of dimensions. This is used to remove unnecessary data from the metrics.
+|`[]`
+
+|`dimensions_cache_size`
+|Defines the cache size for storing dimensions, optimizing the memory usage of the collector. Must be a number bigger than 0.
+|`1000`
+
+|`aggregation_temporality`
+|Specifies the aggregation temporality for the generated metrics. It can be set to either `AGGREGATION_TEMPORALITY_CUMULATIVE` or `AGGREGATION_TEMPORALITY_DELTA`.
+|`AGGREGATION_TEMPORALITY_CUMULATIVE`
+
+|`metrics_flush_interval`
+|Flush interval of the generated metrics.
+|`60s`
+
+|`metrics_expiration`
+|Specifies the expiration time as the delta in nanoseconds, after which metrics will no longer be exported if no new spans are received. A value of 0 indicates that the metrics will never expire.
+|`0`
+
+|`events.enabled`
+|Enable event metrics.
+|`false`
+
+|`events.dimensions`
+|Specifies the list of span event attributes to add as dimensions to the events metric, in addition to the common and configured dimensions for span and resource attributes.
+|`[]`
+
+|`resource_metrics_key_attributes`
+|Filters the resource attributes used to generate the resource metrics key map hash. This is useful when changing resource attributes (e.g., process ID) may disrupt counter metrics.
+|`[]`
+|===
+
+
+=== Troubleshooting the Spanmetrics Connector
+
+If you encounter issues with the Spanmetrics Connector, use the following troubleshooting steps to help diagnose and resolve common problems.
+
+==== Missing or incomplete metrics
+
+If the expected metrics (e.g., request count, error count, or duration) are missing or incomplete, consider the following:
+
+.Procedure
+
+-  Check the span data: ensure that the incoming spans contain the required attributes (e.g., `service.name`, `span.kind`, `span.name`) to aggregate the metrics correctly. Missing attributes may result in incomplete metrics.
++
+- Validate `metrics_flush_interval` and `metrics_expiration`: ensure the `metrics_flush_interval` is correctly set, and `metrics_expiration` is sufficient. Metrics might not be exported if the expiration time is too short or spans are not consistently received.
+
+==== Incorrect histogram bucket configuration
+
+If the span duration is not being correctly categorized into histogram buckets, check the following:
+
+.Procedure
+
+- Ensure the correct bucket intervals are defined: review the `histogram.buckets` configuration. Adjust the bucket intervals to align with the span durations in your telemetry data. If spans fall outside the specified bucket ranges, they may not be aggregated as expected.
++
+- Check the `histogram.unit`: verify that the `histogram.unit` (e.g., `ms` or `s`) matches the desired time unit for recording span durations. Incorrect units could result in unexpected distribution of spans across histogram buckets.
+
+==== Unexpected aggregation behavior
+
+If the metrics are aggregated in a way that does not meet your expectations, review the following:
+
+.Procedure
+
+- Verify `aggregation_temporality`: ensure that the `aggregation_temporality` is set to the appropriate value (`AGGREGATION_TEMPORALITY_CUMULATIVE` or `AGGREGATION_TEMPORALITY_DELTA`) depending on your needs. Cumulative aggregation might result in metrics that increase over time, while delta aggregation resets after each export.
+
+==== Metrics not including the expected dimensions
+
+If certain dimensions (e.g., `http.method`, `http.status_code`) are missing from the metrics, check the following:
+
+.Procedure
+
+- Ensure dimensions are correctly specified: review the `dimensions` field in the configuration and ensure all necessary dimensions are listed. If a dimension is missing from this list, it will not be included in the aggregated metrics.
++
+- Check `exclude_dimensions`: ensure that the dimensions you expect are not listed in the `exclude_dimensions` field. Excluded dimensions will not appear in the final metrics.
+
+==== Events not showing in the metrics
+
+If event-based metrics (e.g., exception types or messages) are not showing up, check the following:
+
+.Procedure
+
+- Verify `events.enabled`: ensure that `events.enabled` is set to `true` in the configuration. If this parameter is `false`, event metrics will not be generated.
++
+- Review event dimensions: make sure that the event attributes you want to track are listed under `events.dimensions`. Only the specified event attributes will be included in the event metrics.
+
+- Check if spans include events: ensure that the incoming spans contain the events you are trying to aggregate, such as `exception.type` and `exception.message`.
+
 
 [role="_additional-resources"]
 [id="additional-resources_otel-collector-connectors_{context}"]
 == Additional resources
 * link:https://opentelemetry.io/docs/specs/otlp/[OpenTelemetry Protocol (OTLP) documentation]
+* link:https://github.com/open-telemetry/opentelemetry-collector-contrib/blob/main/pkg/ottl/README.md[OpenTelemetry Transformation Language (OTTL) documentation]
