--- a/observability/otel/otel-collector/otel-collector-connectors.adoc
+++ b/observability/otel/otel-collector/otel-collector-connectors.adoc
@@ -147,7 +147,7 @@ If telemetry data is not being routed to the intended pipelines, the routing con
 
 .Procedure
 
-- Confirm that the attribute used in the condition exists in the telemetry resource: use the <<debug-exporter-to-stdout_{context},Debug Exporter>> to inspect telemetry data and verify that the `X-Tenant` attribute or other used attributes are present and correctly populated.
+- Confirm that the attribute used in the condition exists in the telemetry resource: use the link:otel-collector-exporters.html#debug-exporter_otel-collector-exporters[Debug exporter] to inspect telemetry data and verify that the `X-Tenant` attribute or other used attributes are present and correctly populated.
 +
 - Test with a simplified condition: try routing based on simpler conditions (e.g., `route() where attributes["X-Tenant"] != ""`) to isolate potential issues with the logic in more complex expressions.
 
@@ -203,3 +203,4 @@ include::snippets/technology-preview.adoc[]
 [id="additional-resources_otel-collector-connectors_{context}"]
 == Additional resources
 * link:https://opentelemetry.io/docs/specs/otlp/[OpenTelemetry Protocol (OTLP) documentation]
+* link:https://github.com/open-telemetry/opentelemetry-collector-contrib/blob/main/pkg/ottl/README.md[OpenTelemetry Transformation Language (OTTL) documentation]
