--- a/observability/otel/otel-collector/otel-collector-connectors.adoc
+++ b/observability/otel/otel-collector/otel-collector-connectors.adoc
@@ -153,7 +153,7 @@ If telemetry data is not being routed to the intended pipelines, the routing con
 
 ==== Default pipeline is not applied
 
-If telemetry data that doesn’t match any routing conditions is not being routed to the default pipeline, check the following:
+If telemetry data that doesn't match any routing conditions is not being routed to the default pipeline, check the following:
 
 .Procedure
 
