--- a/observability/otel/otel-configuration-of-instrumentation.adoc
+++ b/observability/otel/otel-configuration-of-instrumentation.adoc
@@ -9,6 +9,7 @@ toc::[]
 :FeatureName: OpenTelemetry instrumentation injection
 include::snippets/technology-preview.adoc[leveloffset=+1]
 
-The {OTELName} Operator uses a custom resource definition (CRD) file that defines the configuration of the instrumentation.
+The {OTELName} Operator uses an `Instrumentation` custom resource that defines the configuration of the instrumentation.
 
+include::modules/otel-autoinstrumentation.adoc[leveloffset=+1]
 include::modules/otel-config-instrumentation.adoc[leveloffset=+1]
